# azure-create-policy-exceptions

./: README.md  azure_resource_graph_query.py  common_utils.py  policy_exception.py  pyproject.toml  streamlit_app.py
.github/: dependabot.yml
.github/workflows/: azure-policy-exemption.yml
